--- a/src/app/tournament-result/tournament-result.component.html
+++ b/src/app/tournament-result/tournament-result.component.html
@@ -6,14 +6,14 @@
 		<div class="input-group-prepend">
 			<span class="input-group-text">1º</span>
 		</div>
-		<li class="list-group-item">Cras justo odio</li>
+		<li class="list-group-item">{{tournamentResult.campeao.titulo}}</li>
 	</div>
 	<br>
 	<div class="input-group">
 		<div class="input-group-prepend">
 			<span class="input-group-text">2º</span>
 		</div>
-		<li class="list-group-item">Cras justo odio</li>
+		<li class="list-group-item">{{tournamentResult.viceCampeao.titulo}}</li>
 	</div>
 
 	<br>
