--- a/src/app/film-list/film-list.component.html
+++ b/src/app/film-list/film-list.component.html
@@ -2,12 +2,12 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-4 col-sm-4 col-xs-6">
+		<div class="col-md-4 col-sm-4 col-5">
 			<h5>Selecionados <span class="badge badge-secondary">{{getSelectedSize()}}</span> de 8 filmes</h5>
 		</div>
-		<div class="col-md-4 col-sm-4">
+		<div class="col-md-4 col-sm-4 col-1">
 		</div>
-		<div class="col-md-4 col-sm-4 d-flex flex-row-reverse">
+		<div class="col-md-4 col-sm-4 col-5 d-flex flex-row-reverse">
 			<button class="btn btn-info" (click)="startTournament()">
          Gerar Meu Campeonato
       </button>
