--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<section class="jumbotron text-center">
+<section class="topo jumbotron text-center">
     <div class="container">
       <a class="bar-title" [routerLink]="['/']">
         <h5>Campeonato de Filmes</h5>
@@ -6,7 +6,7 @@
       <br>
       <h2> {{barTitle}} </h2>
 
-      <p class="lead text-muted">{{barDescription}}</p>
+      <p class="lead">{{barDescription}}</p>
      
     </div>
   </section>
